--- a/frontend/src/components/template/FooterP/FooterA.css
+++ b/frontend/src/components/template/FooterP/FooterA.css
@@ -1,11 +1,10 @@
 .container-footer {
     display: grid;
-    grid-template-columns: auto auto;
     grid-template-rows: 25px;
     height: 25px;
     background-color: #0d1117;
     box-shadow: 0 0 10px #974ef7;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
     bottom: 0;
 }
