--- a/frontend/src/components/template/MainP/HomeP/HomeA.css
+++ b/frontend/src/components/template/MainP/HomeP/HomeA.css
@@ -11,40 +11,51 @@
 }
 
 .home {
-    background: linear-gradient(rgba(10, 9, 9, 0.877), rgba(0, 0, 0, 0.815)), url('../../../assets/imgs/bg-main.png');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    box-shadow: 0px 1px 10px var(--bg-shadow);
-
     display: grid;
-    grid-template-rows: 100px  1fr;
-    grid-template-columns: 400px;
-    justify-content: space-between;
+    align-items: center;
+    width: 100%;
     font-family: SourceCode-light, monospace;
 }
 
 
 .welcome-welcome {
-    grid-area: 2 / 1 / 2 / 5;
+    grid-row: 1 / 2;
+    grid-column: 1 / 5;
+    
+    margin: 15px 15px 0px 50px;
     color: #FFF;
-    align-self: start;
-    justify-self: center;
-    font-size: 7rem;
+}
+
+.welcome-welcome::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: white;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 1s ease;
+}
+
+.welcome-welcome:hover::after {
+    transform: scaleX(1);
 }
 
 .welcome-text {
     grid-row: 2 / 3;
     grid-column: 1 / 5;
-    align-self: center;
-    justify-self: center;
+    justify-self: start;
+    align-self: start;
+
+    margin-left: 50px;
     color: #FFF;
 }
 
 .width-text {
     max-width: 1100px;
-    font-size: 4.4rem;
-    text-align: center;
+    font-size: 2.5rem;
 }
 
 span[class*="blinkingCursor"] {
@@ -52,22 +63,21 @@ span[class*="blinkingCursor"] {
     animation: blink 1.2s ease-in-out infinite !important;
 }
 
-.logo-home {
-    grid-row: 2 / 3;
-    grid-column: 3 / 5;
-    align-self: end;
-    justify-self: end;
-    margin-bottom: 20px;
-}
-
-.logo-home h1 {
-    font-size: 1rem;
-    opacity: 10%;
-    letter-spacing: 2px;
-    color: #FFF;
-}
-
 .animation-logo {
     color: #00FFAA;
     animation: blink 1.2s ease-in-out infinite !important;
 }
+
+@media (max-width: 1000px) {
+   .welcome-welcome {
+    margin: 0 auto;
+  }
+
+  .welcome-text {
+    max-width: 98%;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
+
