--- a/frontend/src/components/template/MainP/MainA.css
+++ b/frontend/src/components/template/MainP/MainA.css
@@ -1,5 +1,15 @@
 .main {
     display: grid;
-    grid-template-columns: auto;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 250px;
+    
+    
+    
+}
+
+@media (max-width: 1080px) {
+    .main {
+        grid-template-rows: repeat(4, 980px);
+        gap: 150px;
+    }
 }
