--- a/frontend/src/components/template/MainP/ProjectsP/ProjectsA.css
+++ b/frontend/src/components/template/MainP/ProjectsP/ProjectsA.css
@@ -1,78 +1,16 @@
 .project {
     display: grid;
-    grid-template-columns: 450px 450px;
-    grid-template-rows: 150px 350px;
-    justify-content: space-around;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
 
-    align-items: center;
-    justify-items: center;
-
-    
+    margin-bottom: 45px;
 }
 
-.language {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-    align-self: center;
-    justify-self: start;
 
-    margin-left: 50px;
-
+.language-P {
     font-family: 'Epilogue', sans-serif;
+    font-size: 3.5rem;
     color: #ffffff;
+    margin: 20px 20px 50px 20px;
 }
 
-.experience-icons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    align-self: center;
-    justify-self: center;
-
-    justify-items: center;
-    align-items: center;
-
-    gap: 20px;
-    width: 400px;
-
-    background-color: #3737385b;
-    padding: 1rem 1.5rem;
-    border-radius: 8px;
-    box-shadow: 0 0px 10px var(--bg-shadow); 
-}
-
-.icon-wrapper {
-    cursor: pointer;
-    transition: transform 0.2s;
-}
-
-.icon-wrapper:hover {
-    transform: scale(1.1);
-}
-
-.experience-icon {
-    width: 80px;
-}
-
-.description-area {
-    text-align: center;
-    min-height: 50px;
-}
-
-.skills-text {
-    display: grid;
-    align-items: center;
-
-    font-size: 1.2rem;
-    font-family: 'Epilogue', sans-serif;
-    color: #ffffff;
-    text-align: center;
-
-    background-color: #3737385b;
-    padding: 1rem 1.5rem;
-    border-radius: 8px;
-    box-shadow: 0 0px 10px var(--bg-shadow);
-
-    height: 350px;
-    max-width: 500px;
-}
