--- a/frontend/src/components/template/NavP/NavA.css
+++ b/frontend/src/components/template/NavP/NavA.css
@@ -2,38 +2,74 @@
     margin: 0px;
 }
 
-
-div.containerHeader {
+.container-header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-top: 1px;
-    background-color: #040615;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 25px;
+    background-color: #37373810 ;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 2000;
 }
 
 aside.menu-area {
     display: grid;
-    font-size: 0.8em;
-    
-    align-items: start;
+    align-self: center;
+    min-width: 300px;
+
+    margin-right: 20px;
+    font-size: 0.9em;
 }
 
-a {
+.menu {
+    justify-self: end;
+}
+
+.menu-area a {
+    position: relative;
     font-size: 0.9em;
     margin-left: 12px;
     padding: 1px;
     text-decoration: none;
-    color: var(--bg-footer);
-    transition: all 0.5s ease;
-    color: #974ef7; 
-    font-family: SourceCode-regular, monospace;
+    color: white; 
+    font-family: SourceCode-light, monospace;
     
 }
 
-a:hover {
-    background-color: #974ef7;
-    color: #ffffffdc;
-    padding: 5px;
-    font-size: 1em;
+.menu-area a::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: white;
+    box-shadow: 1px 1px 5px #974ef7;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 1s ease;
+}
 
+.menu-area a:hover::after {
+    transform: scaleX(1);
+}
+
+.logo-home {
+    margin-top: 2px;
+    align-self: start;
+    margin-left: 20px;
+}
+
+.logo-home h1 {
+    font-size: 1rem;
+    opacity: 10%;
+    letter-spacing: 2px;
+    color: #FFF;
+}
+
+@media (max-width: 730px) {
+    .menu-area {
+        width: 400px;
+    }
 }
