--- a/frontend/src/components/template/MainP/ProjectsP/cards/Card.css
+++ b/frontend/src/components/template/MainP/ProjectsP/cards/Card.css
@@ -10,7 +10,7 @@
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-15px);
   box-shadow: 0 8px 20px rgba(151, 78, 247, 0.6);
 }
 
@@ -18,6 +18,9 @@
   width: 100%;
   height: 180px;
   object-fit: cover;
+  object-position: top center;
+  border-radius: 15px 15px 0px 0px;
+  box-shadow: 0 1px 20px rgba(0, 0, 0, 0.6);
 }
 
 .card-content {
