--- a/frontend/src/components/template/NavP/NavA.css
+++ b/frontend/src/components/template/NavP/NavA.css
@@ -71,6 +71,8 @@ aside.menu-area {
 @media (max-width: 730px) {
     .menu-area {
         width: 400px;
+    }
+    .menu {
         justify-self: center;
     }
 }
