--- a/frontend/src/components/template/MainP/ProjectsP/cards/Card.css
+++ b/frontend/src/components/template/MainP/ProjectsP/cards/Card.css
@@ -11,7 +11,7 @@
 
 .card:hover {
   transform: translateY(-15px);
-  box-shadow: 0 8px 20px rgba(151, 78, 247, 0.6);
+  box-shadow: 0 8px 20px #974ef799;
 }
 
 .card-image {
